[gd_scene load_steps=8 format=3 uid="uid://bmvr8py50ysp6"]

[ext_resource type="Script" path="res://escenas/Menu Principal/script/menu.gd" id="1_a60p0"]
[ext_resource type="Texture2D" uid="uid://cjjaj6ooqcr7q" path="res://escenas/Menu Principal/art/menu.png" id="1_fej0r"]
[ext_resource type="FontFile" uid="uid://dyrfhvq2a8iaf" path="res://escenas/Menu Principal/art/ArcadeClassic.ttf" id="3_unmvl"]
[ext_resource type="Theme" uid="uid://di8bfntxwjdif" path="res://escenas/Menu Principal/art/button_default.tres" id="4_v3xua"]
[ext_resource type="AudioStream" uid="uid://birl7jn6ran7v" path="res://escenas/Menu Principal/art/musica.mp3" id="5_sxmf7"]
[ext_resource type="PackedScene" uid="uid://y8j3xfbfe4m7" path="res://escenas/config.tscn" id="6_whclh"]
[ext_resource type="Texture2D" uid="uid://bj13vu1ncm8dm" path="res://assets/tutorial.png" id="7_w6gj0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a60p0")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(576, 328)
scale = Vector2(0.643035, 0.643035)
texture = ExtResource("1_fej0r")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -165.0
offset_top = 80.0
offset_right = 165.0
offset_bottom = 182.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_unmvl")
theme_override_font_sizes/font_size = 100
text = "Remind"

[node name="NewGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -107.0
offset_right = 110.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_v3xua")
text = "Nuevo juego"

[node name="ConfigBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_v3xua")
text = "CONFIGURACION"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -184.0
offset_right = 61.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_v3xua")
text = "Salir"

[node name="TutorialBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -263.0
offset_right = 58.0
offset_bottom = -207.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_v3xua")
text = "Â¿Como jugar?"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["audio"]]
stream = ExtResource("5_sxmf7")
autoplay = true

[node name="ConfigMenu" parent="." instance=ExtResource("6_whclh")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Tutorial" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialSprite" type="Sprite2D" parent="Tutorial"]
position = Vector2(568, 305)
texture = ExtResource("7_w6gj0")

[node name="TutorialClose" type="Button" parent="Tutorial"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 874.0
offset_top = 97.0
offset_right = 943.0
offset_bottom = 128.0
text = "CERRAR"

[connection signal="pressed" from="NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
